--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,29 +1,52 @@
 nav {
     background: orange;
     display: flex;
-    padding: 8px;
+    flex-direction: column;
+    box-sizing: border-box;
+    height: 100vh;
+    transition: all 1s;
+    overflow: hidden;
 
-    .logo {
-        
-        background: white;
-        margin: auto;
+    // &.active {
+    //     height: 100vh;
+    // }
 
-        img {
-            display: block;
-            height: 50px;
-            min-height: 50px;
+    .line {
+
+        display: flex;
+        flex-direction: row;
+
+        padding: 8px;
+
+        .logo {
+            
+            background: white;
+            margin: auto;
+
+            img {
+                display: block;
+                height: 50px;
+                min-height: 50px;
+            }
         }
-    }
 
-    .toggle {
-        background: red;
-        align-self: center;
+        .toggle {
+            background: red;
+            cursor: pointer;
+        }
+
     }
 
     .collapse {
         background: green;
-        display: none;
-        width: 100%;
+        flex: 0;
+        overflow: hidden;
+        transition:flex 0.3s ease-out;
+
+        &.active {
+            flex: 1; 
+        }
+
     }
 
     
