--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,20 @@
 nav {
     background: orange;
-    display: flex;
-    flex-direction: column;
     box-sizing: border-box;
-    height: 100vh;
     transition: all 1s;
-    overflow: hidden;
+    position: fixed;
+    width: 100%;
+ 
 
-    // &.active {
-    //     height: 100vh;
-    // }
+ 
 
     .line {
-
+        position: relative;
         display: flex;
         flex-direction: row;
-
+        flex: 0 0 auto;
         padding: 8px;
+        z-index: 2;
 
         .logo {
             
@@ -32,6 +30,8 @@ nav {
 
         .toggle {
             background: red;
+            width: 40px;
+            height: 40px;
             cursor: pointer;
         }
 
@@ -39,12 +39,15 @@ nav {
 
     .collapse {
         background: green;
-        flex: 0;
-        overflow: hidden;
-        transition:flex 0.3s ease-out;
+        position: absolute;
+        top: -100vh;
+        width: 100%;
+        height: 100vh;
+        z-index: 1;
+        transition: top 0.7s ease-in;
 
         &.active {
-            flex: 1; 
+            top: 0;
         }
 
     }
