--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,29 @@
     
     <div class="collapse" [class.active]="expandir" >
 
-        soy colapse
+        <ul class="items">
+            <li>
+                <a href="#home">Item 1 more long</a>
+            </li>
+            <li>
+                <a href="#video">Item 2</a>
+            </li>
+            <li>
+                <a href="#spikers">Item 3</a>
+            </li>
+            <li>
+                <a href="#spikers">Item 4</a>
+            </li>
+            <li>
+                <a href="#spikers">Item 5</a>
+            </li>
+    
+        </ul>
+
+        <ul class="social">
+            <li><a class="face" href="facebook.com">face</a></li>
+            <li><a class="twiter" href="twiter.com">twiter</a></li>
+        </ul>
 
     </div>
 </nav>
