--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,21 +1,37 @@
+$font1: "Helvetica, Arial, sans-serif";
+
 $menuHeight: 50px;
 $menuPadding: 8px;
 $menuPaddingLR:18%;  //Paddin left and right in Destopk  
 $color1: #fff;
+$color2: #b10b0f;
+$colorText: #000;
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    a {
+        text-decoration: none;
+        cursor: pointer;
+        //background: pink;
+        
+        &:link,
+        &:visited,
+        &:active { color: $colorText; }
+
+        &:hover { color: $color2; }
+    } 
+}
 
 nav {
     background: orange;
     box-sizing: border-box;
+    font-family: $font1;
     position: fixed;
     width: 100%;
- 
-    @media only screen and (min-width : 1200px) {
-        display: flex;
-        padding: 0 $menuPaddingLR;
-
-        .line .toggle {display: none;}
-    }
- 
+    color: $colorText;
+  
     .line {
         position: relative;
         display: flex;
@@ -26,12 +42,13 @@ nav {
         background: $color1;
 
         .logo {          
-            background: white;
+            //background: white;
             margin: auto;
 
             img {
                 display: block;
-                height: $menuHeight - $menuPadding * 2;             
+                height: $menuHeight - $menuPadding * 2;   
+                background: white;          
             }
         }
 
@@ -44,7 +61,7 @@ nav {
     }
 
     .collapse {
-        background: green;
+        background: $color1;
         position: absolute;
         top: -100vh;
         width: 100%;
@@ -53,14 +70,130 @@ nav {
         transition: top 0.7s ease-in;
         padding-top: $menuHeight;
 
+        display: flex;
+        flex-direction: column;
+
         &.active { top: 0; }
 
-        @media only screen and (min-width : 1200px) {
-            position: initial;
+        ul.items {
+            //background: deepskyblue;
+            text-transform: uppercase;
+            padding: 10% 0 20% 0;
+            //padding: 10vw 0 20vw 0;
+
+            li {
+                background: gold;
+                margin-bottom: 5px;
+                height: 10vw;
+                line-height: 10vw;
+                a {
+                    display: inline-block;
+                    width: 100%;
+                    height: 100%;
+                    font-size: 16px;
+                    @media only screen and (min-width : 768px) {
+                        font-size: 30px;
+                    }
+                }
+
+                
+            }
+
+            a::before {
+                content: "";
+                display: inline-block;
+                width: 20%;
+                height: 1px;
+                vertical-align: middle;
+                background-color: $colorText;
+                margin-right: 10px;
+            }
+        }
+
+        ul.social {
+            flex: 1;
+            background: $color2;
+            text-align: center;
+
+            li {
+                display: inline-block;
+                background: red;
+                padding: 5px;
+                transform: translateY(-50%);
+
+                a{
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                }
+
+            }
+        }
+    }
+}
+
+
+@media only screen and (min-width : 1200px) {
+    
+    nav {
+        display: flex;
+        padding: 0 $menuPaddingLR;
+       
+
+        .line {
+            background: none;
+            .toggle {display: none;}
+        } 
+
+        .collapse {
+            margin-left: auto;
+            background-color:blueviolet;
+            flex-direction: row;
+            justify-content: flex-end;
+
+            position: relative;
+            top: 0;
             width: initial;
             height: initial;
-            padding-top: initial;
-            flex: 1;
+            padding-top: 0;
+            padding: $menuPadding 0;
+
+            ul.items {
+                background: red;
+                flex: initial;
+                display: flex; 
+                padding: 0;
+                 
+                 li {
+                     margin-left: 10px;
+                    margin-bottom: 0;
+                    height: initial;
+                    line-height: initial;
+                    position: relative;
+
+                    a{ 
+                        font-size: 14px; 
+                        display: block;
+                        width: initial;
+                        position: relative;
+                        line-height: $menuHeight - $menuPadding * 2;
+                    }
+                 }
+
+                 a::before {
+                    content: none;
+                    display: none;
+                 }
+            }
+
+            ul.social {
+                flex: initial;
+                position: initial;
+                width: initial;
+                height: initial;
+                padding-top: initial;
+                flex: 1;
+            }
         }
     }
 }
