item funcionando bien en mobile y desktop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 
         <ul class="items">
             <li>
-                <a href="#home">Item 1 more long</a>
+                <a href="#home">Item 1</a>
             </li>
             <li>
                 <a href="#video">Item 2</a>
@@ -30,7 +30,7 @@
 
         <ul class="social">
             <li><a class="face" href="facebook.com">face</a></li>
-            <li><a class="twiter" href="twiter.com">twiter</a></li>
+            <li><a class="twiter" href="twiter.com">tt</a></li>
         </ul>
 
     </div>
