--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,9 @@ $font1: "Helvetica, Arial, sans-serif";
 $menuHeight: 50px;
 $menuPadding: 8px;
 $menuPaddingLR:18%;  //Paddin left and right in Destopk  
+
+$socialPhoneSize: 50px;  // widht and height of social icons
+
 $color1: #fff;
 $color2: #b10b0f;
 $colorText: #000;
@@ -25,7 +28,7 @@ ul {
 }
 
 nav {
-    background: orange;
+
     box-sizing: border-box;
     font-family: $font1;
     position: fixed;
@@ -42,13 +45,12 @@ nav {
         background: $color1;
 
         .logo {          
-            //background: white;
             margin: auto;
 
             img {
                 display: block;
                 height: $menuHeight - $menuPadding * 2;   
-                background: white;          
+                //background: white;          
             }
         }
 
@@ -76,13 +78,11 @@ nav {
         &.active { top: 0; }
 
         ul.items {
-            //background: deepskyblue;
             text-transform: uppercase;
             padding: 10% 0 20% 0;
-            //padding: 10vw 0 20vw 0;
+            padding: 10vw 0 20vw 0;
 
             li {
-                background: gold;
                 margin-bottom: 5px;
                 height: 10vw;
                 line-height: 10vw;
@@ -113,18 +113,20 @@ nav {
         ul.social {
             flex: 1;
             background: $color2;
-            text-align: center;
+
+            display: flex;
+            justify-content: center;
 
             li {
-                display: inline-block;
-                background: red;
-                padding: 5px;
+                height: $socialPhoneSize;
                 transform: translateY(-50%);
+                margin-left: 10px;
 
                 a{
                     display: block;
-                    width: 100%;
-                    height: 100%;
+                    background: black;
+                    width: $socialPhoneSize;
+                    height: $socialPhoneSize;
                 }
 
             }
@@ -147,7 +149,7 @@ nav {
 
         .collapse {
             margin-left: auto;
-            background-color:blueviolet;
+            background: none;
             flex-direction: row;
             justify-content: flex-end;
 
@@ -159,13 +161,13 @@ nav {
             padding: $menuPadding 0;
 
             ul.items {
-                background: red;
+                //background: red;
                 flex: initial;
                 display: flex; 
                 padding: 0;
                  
                  li {
-                     margin-left: 10px;
+                    margin-left: 10px;
                     margin-bottom: 0;
                     height: initial;
                     line-height: initial;
@@ -187,6 +189,7 @@ nav {
             }
 
             ul.social {
+                background: none;
                 flex: initial;
                 position: initial;
                 width: initial;
@@ -194,33 +197,23 @@ nav {
                 padding-top: initial;
                 flex: 1;
             }
+
+            ul.social {
+                margin-left: 10px;
+                li {                
+                    transform: initial;
+                    height: initial;
+    
+                    a{
+                        display: block;
+                        width: $menuHeight - $menuPadding * 2;
+                        height: $menuHeight - $menuPadding * 2;
+                    }
+    
+                }
+            }
         }
     }
 }
 
-
-/* Custom, iPhone Retina */ 
-@media only screen and (min-width : 320px) {
-
-}
-
-/* Extra Small Devices, Phones */ 
-@media only screen and (min-width : 480px) {
-
-}
-
-/* Small Devices, Tablets */
-@media only screen and (min-width : 768px) {
-
-}
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
-
-}
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px) {
-
-}
 
