--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <nav [class.active]="expandir">
 
-    <div class="line">
+    <div class="head">
         <a class="logo" href="#home">
             <img src="assets/menuAlianza/logo.svg" alt="La Alianza">
         </a>
-        <div class="toggle" [class.active]="!collapsed" (click)="expandir = !expandir" >X</div>
+        <div class="toggle butterfly" [class.active]="expandir" (click)="expandir = !expandir" >
+            <div class="center-line"></div>
+        </div>
     </div>
     
     <div class="collapse" [class.active]="expandir" >
@@ -29,8 +31,12 @@
         </ul>
 
         <ul class="social">
-            <li><a class="face" href="facebook.com">face</a></li>
-            <li><a class="twiter" href="twiter.com">tt</a></li>
+            <li><a class="face" href="facebook.com">
+                <img src="assets/menuAlianza/face.svg" >
+            </a></li>
+            <li><a class="twiter" href="twiter.com">
+                <img src="assets/menuAlianza/twitter.svg" >
+            </a></li>
         </ul>
 
     </div>
