--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,10 +32,10 @@
 
         <ul class="social">
             <li><a class="face" href="facebook.com">
-                <img src="assets/menuAlianza/face.svg" >
+                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 40'%3E%3Cpath d='M27.5 10.2h-2.7c-2.1 0-2.6 1-2.6 2.5V16h5.1l-.6 5.2h-4.4v13.2H17V21.2h-4.4V16H17v-3.8c0-4.4 2.7-6.8 6.6-6.8 1.9 0 3.5.1 3.9.2v4.6z'/%3E%3C/svg%3E" >
             </a></li>
             <li><a class="twiter" href="twiter.com">
-                <img src="assets/menuAlianza/twitter.svg" >
+                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 40 40'%3E%3Cpath d='M33.2 13.3v.9c0 9.3-7.1 20.1-20.1 20.1-4 0-7.7-1.2-10.8-3.2.6.1 1.1.1 1.7.1 3.3 0 6.3-1.1 8.8-3-3.1-.1-5.7-2.1-6.6-4.9.4.1.9.1 1.3.1.6 0 1.3-.1 1.9-.3-3.2-.7-5.6-3.5-5.6-6.9v-.1c1 .5 2 .9 3.2.9-1.9-1.3-3.2-3.4-3.2-5.9 0-1.3.4-2.5 1-3.5 3.5 4.3 8.7 7.1 14.6 7.4-.1-.5-.2-1-.2-1.6 0-3.9 3.2-7.1 7.1-7.1 2 0 3.9.9 5.1 2.2 1.6-.3 3.1-.9 4.5-1.7-.5 1.7-1.7 3-3.1 3.9 1.4-.2 2.8-.6 4.1-1.1-1.1 1.5-2.3 2.7-3.7 3.7z'/%3E%3C/svg%3E" >
             </a></li>
         </ul>
 
