--- a/src/app/menu-alianza/menu-alianza.component.scss
+++ b/src/app/menu-alianza/menu-alianza.component.scss
@@ -32,6 +32,8 @@ nav {
     box-sizing: border-box;
     font-family: $font1;
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     color: $colorText;
   
