--- a/src/app/menu-alianza/menu-alianza.component.html
+++ b/src/app/menu-alianza/menu-alianza.component.html
@@ -13,19 +13,19 @@
 
         <ul class="items">
             <li>
-                <a href="#home">Item 1</a>
+                <a href="#home" (click)="expandir = !expandir">Item 1</a>
             </li>
             <li>
-                <a href="#video">Item 2</a>
+                <a href="#video" (click)="expandir = !expandir">Item 2</a>
             </li>
             <li>
-                <a href="#spikers">Item 3</a>
+                <a href="#spikers" (click)="expandir = !expandir">Item 3</a>
             </li>
             <li>
-                <a href="#spikers">Item 4</a>
+                <a href="#spikers" (click)="expandir = !expandir">Item 4</a>
             </li>
             <li>
-                <a href="#spikers">Item 5</a>
+                <a href="#spikers" (click)="expandir = !expandir">Item 5</a>
             </li>
     
         </ul>
